Changelog
=========

1.0 - Unreleased
----------------

* check if c.transmogrifier is installed [giorgio]
* switch simplemanagement to collective namespace
* added transmogrify.dexterity
* added plone.app.toolbar
* changed profile titles
* changed pipeline to import test content
* added simplemanagement and other dependencies