@@ -10,6 +10,31 @@ else:
     HAS_TRANSMOGRIFIER = True
 
 
+def create_users(context):
+    if context.readDataFile('loadcontent_various.txt') is None:
+        return
+
+    portal = context.getSite()
+    test_users = [
+        ('employee1', 'employee1', 'employees'),
+        ('employee2', 'employee2', 'employees'),
+        ('pm1', 'pm1', 'PM'),
+        ('customer', 'customer', None),
+    ]
+
+    for username, password, group in test_users:
+        if username not in portal.acl_users.getUserIds():
+            try:
+                portal.portal_registration.addMember(username, password)
+                if group:
+                    portal.portal_groups.addPrincipalToGroup(username, group)
+            except ValueError:
+                logger.warn('The login name "%s" is not valid.' % username)
+            except KeyError:
+                logger.warn('The group "%s" is not valid.' % group)
+    return 'Users created'
+
+
 def load_content(context):
     if context.readDataFile('loadcontent_various.txt') is None:
         return
