@@ -4,6 +4,7 @@ Changelog
 1.0 - Unreleased
 ----------------
 
+* added test users [giorgio]
 * check if c.transmogrifier is installed [giorgio]
 * switch simplemanagement to collective namespace
 * added transmogrify.dexterity
